<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="sk.styk.martin.location.ui.locationdetailsheet.LocationDetailViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/detail_sheet_title"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_sheet_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/detail_sheet_divider"
            style="@style/Divider"
            app:layout_constraintTop_toBottomOf="@+id/detail_sheet_title"/>

        <TextView
            android:id="@+id/detail_sheet_latitude"
            style="@style/Title"
            android:text="@string/detail_sheet_latitude"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_sheet_divider" />

        <TextView
            style="@style/Value"
            app:coordinate="@{viewmodel.locationData.latitude}"
            app:layout_constraintStart_toEndOf="@+id/detail_sheet_latitude"
            app:layout_constraintTop_toTopOf="@+id/detail_sheet_latitude"
            tools:text="Lat" />

        <TextView
            android:id="@+id/detail_sheet_longitude"
            style="@style/Title"
            android:text="@string/detail_sheet_longitude"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_sheet_latitude" />

        <TextView
            style="@style/Value"
            app:coordinate="@{viewmodel.locationData.longitude}"
            app:layout_constraintStart_toEndOf="@+id/detail_sheet_longitude"
            app:layout_constraintTop_toTopOf="@+id/detail_sheet_longitude"
            tools:text="Lon" />

        <TextView
            android:id="@+id/detail_sheet_altitude"
            style="@style/Title"
            android:text="@string/detail_sheet_altitude"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_sheet_longitude" />

        <TextView
            android:id="@+id/detail_sheet_altitude_value"
            style="@style/Value"
            android:text="@{viewmodel.locationData.altitude}"
            app:layout_constraintStart_toEndOf="@+id/detail_sheet_altitude"
            app:layout_constraintTop_toTopOf="@+id/detail_sheet_altitude"
            tools:text="Alt" />

        <TextView
            style="@style/Value"
            android:text="@string/detail_sheet_meter_unit"
            app:layout_constraintStart_toEndOf="@+id/detail_sheet_altitude_value"
            app:layout_constraintTop_toTopOf="@+id/detail_sheet_altitude_value" />

        <TextView
            android:id="@+id/detail_sheet_provider"
            style="@style/Title"
            android:text="@string/detail_sheet_provider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_sheet_altitude" />

        <TextView
            style="@style/Value"
            android:text="@{viewmodel.locationData.provider}"
            app:layout_constraintStart_toEndOf="@+id/detail_sheet_provider"
            app:layout_constraintTop_toTopOf="@+id/detail_sheet_provider"
            tools:text="GPS" />

        <TextView
            android:id="@+id/detail_sheet_time"
            style="@style/Title"
            android:text="@string/detail_sheet_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_sheet_provider" />

        <TextView
            style="@style/Value"
            app:layout_constraintStart_toEndOf="@+id/detail_sheet_time"
            app:layout_constraintTop_toTopOf="@+id/detail_sheet_time"
            app:time="@{viewmodel.locationData.timeStamp}"
            tools:text="17:02" />

    </android.support.constraint.ConstraintLayout>
</layout>